# sz-mg-pgraf

./: III_2020_dekani_utasitas
01_Shaders/: 01_Shaders.sln  CMakeCache.txt  CMakeLists.txt
01_Shaders/01_Shaders/: 01_Shaders.vcxproj  01_Shaders.vcxproj.filters  GLUtils.hpp  MyApp.cpp  MyApp.h  main.cpp  myFrag.frag  myVert.vert
01_Transforms/01_Transforms/: 01_Transforms.vcxproj  01_Transforms.vcxproj.filters  MyApp.cpp  MyApp.h  main.cpp  myFrag.frag  myVert.vert
01_Transforms_Vad/01_Transforms/01_Transforms/: 01_Transforms.vcxproj  01_Transforms.vcxproj.filters  GLUtils.hpp  MyApp.cpp  MyApp.h  main.cpp  myVert.vert
02_ShadersVAOVBO_Indices_Vad/02_ShadersVAOVBO/02_ShadersVAOVBO/: GLUtils.hpp  MyApp.cpp  MyApp.h  main.cpp  myVert.vert
03-01/: .notes.md.swp  notes.md
03_SDLOGL_FW/: 03_SDLOGL_FW.sln
03_SDLOGL_FW/03_SDLOGL_FW/: 03_SDLOGL_FW.vcxproj  03_SDLOGL_FW.vcxproj.filters  MyApp.cpp  MyApp.h  main.cpp
AquaticApeExperiment (1)/: MyApp.cpp  MyApp.h  main.cpp  myFrag.frag
AquaticApeExperiment (1)/includes/: GLconversions.hpp  ProgramObject.cpp  ProgramObject.inl  VertexArrayObject.inl
AquaticApeExperiment/AquaticApeExperiment/: AquaticApeExperiment.sln  AquaticApeExperiment.vcxproj  AquaticApeExperiment.vcxproj.filters  MyApp.cpp  axes.frag  axes.vert  pointDrawer.vert  water.vert
AquaticApeExperiment/AquaticApeExperiment/includes/: GLconversions.hpp  VertexArrayObject.cpp  gCamera.h
Normals_Vad/Normals_Vad/: MyApp.cpp  MyApp.h  Normals_Vad.sln  Normals_Vad.vcxproj  Normals_Vad.vcxproj.filters  myFrag.frag  myVert.vert
Normals_Vad/Normals_Vad/includes/: gCamera.cpp
OGLPack/include/imgui/: .travis.yml  auto.h  imconfig.h  imdock.cpp  imdock.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
OGLPack/include/imgui/ImGuiAl/: LICENSE  README.md
OGLPack/include/imgui/ImGuiAl/button/: README.md  imguial_button.h
OGLPack/include/imgui/ImGuiAl/log/: README.md  imguial_log.cpp  imguial_log.h
OGLPack/include/imgui/ImGuiAl/msgbox/: imguial_msgbox.cpp  imguial_msgbox.h
OGLPack/include/imgui/addons/: imgui_user.h  imgui_user.inl
OGLPack/include/imgui/addons/imguibindings/: ImImpl_Binding_Direct3D9.h  ImImpl_Binding_Glfw3.h  ImImpl_Binding_Glut.h  ImImpl_Binding_SDL2.h  ImImpl_Binding_WinAPI.h  edtaa3func.h  imguibindings.cpp  imguibindings.h
OGLPack/include/imgui/addons/imguicodeeditor/: imguicodeeditor.cpp  imguicodeeditor.h
OGLPack/include/imgui/addons/imguidatechooser/: imguidatechooser.cpp
OGLPack/include/imgui/addons/imguidock/: imguidock.cpp  imguidock.h
OGLPack/include/imgui/addons/imguifilesystem/: imguifilesystem.cpp  imguifilesystem.h
OGLPack/include/imgui/addons/imguihelper/: imguihelper.cpp  imguihelper.h
OGLPack/include/imgui/addons/imguilistview/: imguilistview.cpp
OGLPack/include/imgui/addons/imguinodegrapheditor/: imguinodegrapheditor.cpp  imguinodegrapheditor.h
OGLPack/include/imgui/addons/imguipanelmanager/: imguipanelmanager.cpp
OGLPack/include/imgui/addons/imguistring/: imguistring.h
OGLPack/include/imgui/addons/imguistyleserializer/: imguistyleserializer.cpp  imguistyleserializer.h
OGLPack/include/imgui/addons/imguitabwindow/: imguitabwindow.cpp  imguitabwindow.h
OGLPack/include/imgui/addons/imguitoolbar/: imguitoolbar.h
OGLPack/include/imgui/addons/imguivariouscontrols/: imguivariouscontrols.cpp  imguivariouscontrols.h
OGLPack/include/imgui/addons/imguiyesaddons/: imguibz2.cpp  imguifreetype.cpp  imguifreetype.h  imguiimageeditor.cpp  imguiimageeditor.h  imguiminigames.cpp  imguiminigames.h  imguipdfviewer.cpp  imguipdfviewer.h  imguisdf.cpp  imguisdf.h  imguisoloud.cpp  imguisoloud.h  imguistringifier.cpp
OGLPack/include/imgui/addons/imguiyesaddons/imguiimageeditor_plugins/: tiny_jpeg.h
OGLPack/include/imgui/auto/: README.md  auto.cpp  core.h  impl_base.h  impl_glm.h
OGLPack/include/imgui/auto/boost/pfr/: flat.hpp  precise.hpp
OGLPack/include/imgui/auto/boost/pfr/detail/: cast_to_layout_compatible.hpp  config.hpp  core14.hpp  core14_classic.hpp  core14_loophole.hpp  core17.hpp  core17_generated.hpp  detectors.hpp  fields_count.hpp  for_each_field_impl.hpp  functional.hpp  io.hpp  make_flat_tuple_of_references.hpp  offset_based_getter.hpp  sequence_tuple.hpp  size_array.hpp  stdtuple.hpp
OGLPack/include/imgui/auto/boost/pfr/flat/: core.hpp  functions_for.hpp  functors.hpp  io.hpp  ops.hpp  tuple_size.hpp
OGLPack/include/imgui/auto/boost/pfr/precise/: core.hpp  functions_for.hpp  functors.hpp  io.hpp  ops.hpp  tuple_size.hpp
OGLPack/include/imgui/curve/: curve.hpp
OGLPack/include/imgui/extra_fonts/: README.txt
OGLPack/include/imgui/textedit/: README.md  TextEditor.h
OglBase/OglBase/: MyApp.cpp  MyApp.h  OglBase.vcxproj.filters  myFrag.frag
OglBase/OglBase/includes/: GLUtils.hpp  Mesh_OGL3.cpp  ObjParser_OGL3.cpp  ObjParser_OGL3.h  ProgramObject.h  ShaderObject.cpp  ShaderObject.h  TextureObject.inl  VertexArrayObject.h  VertexArrayObject.inl
OneDrive_2023-03-30/Gyak04 3.&6. csoport (Szerda)/: GrafGyak04_Vad_Szerda.pptx
OneDrive_2023-03-30/Gyak04 3.&6. csoport (Szerda)/02_ShadersVAOVBO/: 02_ShadersVAOVBO.sln
OneDrive_2023-03-30/Gyak04 3.&6. csoport (Szerda)/02_ShadersVAOVBO/02_ShadersVAOVBO/: .MyApp.cpp.swp  02_ShadersVAOVBO.vcxproj  02_ShadersVAOVBO.vcxproj.filters  MyApp.cpp  MyApp.h  myFrag.frag
ParSurfs_Vad/ParSurfs_Vad/: MyApp.cpp  MyApp.h  MyApp_InitParamSurfGeometry.cpp  ParSurfs_Vad.sln  ParSurfs_Vad.vcxproj  ParSurfs_Vad.vcxproj.filters  main.cpp  myFrag.frag
SPOTLIGHT/01_Middle/01_Middle/: 01_Middle.vcxproj  MyApp.cpp  MyApp.h  dirLight.frag  dirLight.vert  main.cpp
bead1/01_Transforms/: 01_Transforms.sln
bead1/01_Transforms/01_Transforms/: MyApp.cpp  MyApp.h  gCamera.cpp  gCamera.h
bead2/OglBase/OglBase/: MyApp.cpp  MyApp.h  MyApp_InitSphereGeometry.cpp  OglBase.sln  OglBase.vcxproj  main.cpp  myFrag.frag  myVert.vert
bead2/OglBase/OglBase/includes/: BufferObject.h  BufferObject.inl  Mesh_OGL3.h  TextureObject.h  gCamera.cpp  gCamera.h
